--- a/style/style.scss
+++ b/style/style.scss
@@ -21,6 +21,12 @@ body,html{
 
 .informationrow{
     line-height: 2em;
+    
+}
+
+
+.informationrow{
+    padding: 1em;
 }
 .openingsuren{
     ul{
@@ -28,5 +34,14 @@ body,html{
             list-style: none;
 
         }
+    }
+}
+
+.col-md-6{
+    button{
+    border: 1px solid black;
+    border-radius: 20px;
+    text-align: center;
+    background: transparent;
     }
 }
